<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/imageView_myImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@color/colorAccent" />

    <EditText
        android:id="@+id/editTextView_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_myImageView" />

    <TextView
        android:id="@+id/textView_track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextView_Name" />

    <TextView
        android:id="@+id/textView_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        app:layout_constraintEnd_toEndOf="@+id/textView_track"
        app:layout_constraintStart_toStartOf="@+id/textView_track"
        app:layout_constraintTop_toBottomOf="@+id/textView_track" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/textView_country"
        app:layout_constraintStart_toStartOf="@+id/textView_country"
        app:layout_constraintTop_toBottomOf="@+id/textView_country" />

    <TextView
        android:id="@+id/textView_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/textView_email"
        app:layout_constraintStart_toStartOf="@+id/textView_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_email" />

    <TextView
        android:id="@+id/textView_SlackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/slackUsername"
        app:layout_constraintEnd_toEndOf="@+id/textView_phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/textView_phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView_phoneNumber" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_profileback"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:tint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView_profileHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/myProfile"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_myImageView"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"

        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>