<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_welcomeHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcomeHeader"
        android:textAlignment="center"
        android:textAppearance="@style/Text_appearances"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_AboutALC"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/pluralSightOrange"
        android:text="@string/aboutALC"
        android:textColor="@color/textColorsBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_welcomeHeader"
        app:layout_constraintStart_toStartOf="@+id/textView_welcomeHeader"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcomeHeader" />

    <Button
        android:id="@+id/button_MyProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/pluralSightOrange"
        android:text="@string/myProfile"
        android:textColor="@color/textColorsBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_AboutALC"
        app:layout_constraintStart_toStartOf="@+id/button_AboutALC"
        app:layout_constraintTop_toBottomOf="@+id/button_AboutALC" />

</android.support.constraint.ConstraintLayout>